Finalized theme toggle + gallery dark mode fix

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -14,13 +14,13 @@
 
       li {
         list-style-type: none;
-        margin: 0 10px 0 10px;
+        margin-right: 15px;
 
         a {
           svg {
             fill: $accent;
-            width: 15px;
-            height: 15px;
+            width: 20px;
+            height: 20px;
           }
 
           &:hover {
