--- a/src/styles/pages/_index.scss
+++ b/src/styles/pages/_index.scss
@@ -129,7 +129,7 @@
       margin-top: 5px;
 
       li {
-        margin-left: 15px;
+        margin-right: 10px;
         list-style-type: none;
 
         a {
@@ -240,3 +240,5 @@ body.dark {
     }
   }
 }
+
+@import "../components/themetoggler";
