--- a/src/styles/templates/_design-gallery.scss
+++ b/src/styles/templates/_design-gallery.scss
@@ -29,10 +29,14 @@
   }
 }
 
-@media only screen and (min-width: $mobileSize) {
-  .snap-gallery {
+body.dark {
+  .design-gallery {
     .gallery-title {
-      justify-content: center;
+      color: $dark-primaryColor;
+
+      span {
+        color: $dark-accent;
+      }
     }
   }
 }
