--- a/src/styles/templates/_snap-gallery.scss
+++ b/src/styles/templates/_snap-gallery.scss
@@ -73,3 +73,15 @@
     }
   }
 }
+
+body.dark {
+  .snap-gallery-page {
+    .gallery-title {
+      color: $dark-primaryColor;
+
+      span {
+        color: $dark-accent;
+      }
+    }
+  }
+}
